log
Fri 24 Mar 2023 12:47:52 AM UTC: 
 tests:  0|6
total_score: 0/70
bd6f410
Fri 24 Mar 2023 12:51:38 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |   List *lista = (List*) malloc (sizeof(List));
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
0e93f03
